# autoresttest-api

./: Dockerfile  README.md  SUMMARY.md  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: test_runner.py
app/core/: config.py
app/models/: test_config.py
app/services/: model_service.py  progress_updater.py  storage_uploader.py
models_store/: README.md  autorest_model.pkl
models_store/autoresttest/: configurations.py  dummy_autoresttest.py
models_store/autoresttest/aratrl-openapi/: market2.yaml
models_store/autoresttest/aratrl-service/jdk11/market/: docker-compose.yml  swagger.json
models_store/autoresttest/aratrl-service/jdk11/market/market-core/: pom.xml
models_store/autoresttest/aratrl-service/jdk11/market/market-core/src/main/java/market/domain/: Cart.java  Contacts.java  UserAccount.java
models_store/autoresttest/aratrl-service/jdk11/market/market-core/src/main/resources/: schema.sql
models_store/autoresttest/aratrl-service/jdk11/market/market-rest/: pom.xml
models_store/autoresttest/aratrl-service/jdk11/market/market-rest/src/main/resources/: application.yml
