[project]
name = "autoresttest-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Davong",email = "david.laptop@dewaweb.com"}
]
readme = "README.md"
requires-python = "~3.11"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "scikit-learn (==1.5.0)",
    "numpy (<2.0)",
    "scipy (==1.10.1)",
    "openai (>=1.35.0)",
    "beautifulsoup4 (==4.12.3)",
    "python-dotenv (==1.0.1)",
    "prance (==23.6.21.0)",
    "openapi-spec-validator (==0.7.1)",
    "pyproject-hooks (==1.0.0)",
    "gensim (>=4.3.3,<5.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
